# mr-generator

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: CHANGELOG.md  DEVELOPER_GUIDE.md  DEVELOPER_QUICK_START.md  IMPROVED_PROMPTS.md  MANUAL_TESTING_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  REQUIREMENTS.md  SMART_DIFF_HANDLING.md
scripts/: activate-venv.sh  mr  quick-start.sh  quick_gigachat_test.py  test_setup.py
src/mr_generator/: __init__.py  cli.py  config.py
src/mr_generator/core/: __init__.py  base_provider.py  git_helper.py
src/mr_generator/providers/: __init__.py  deepseek_provider.py  gigachat_provider.py
tests/: __init__.py  test_basic.py
